Fixed alignment issues for the content.

--- a/src/scss/ACWD/_base.scss
+++ b/src/scss/ACWD/_base.scss
@@ -100,7 +100,7 @@ a {
 .row {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-end;
     margin: 2.5rem 0;
 }
 
