--- a/src/scss/ACWD/_footer.scss
+++ b/src/scss/ACWD/_footer.scss
@@ -1,4 +1,8 @@
-.hearts {
-    color: map-get($colors, red);
-    font-size: 1.5rem;
+footer.row {
+    justify-content: space-around;
+    
+    .hearts {
+        color: map-get($colors, red);
+        font-size: 1.5rem;
+    }
 }
